# osxiec

./: CMakeLists.txt  LICENSE  LICENSE2  README.md  api_for_osxiec_script.h  osxiec.c  osxiec.h
example/: run.sh  test.c
example/layers/layer1/: file1.txt
example/layers/layer2/: file2.txt
example/test/: test.osxs
osxiec_script/: osxiec_script.c  osxiec_script.h
plugin_manager/: plugin.h  plugin_manager.c  plugin_manager.h
samples/: Dockerfile  Dockerfile.test  container2  container_config.txt  deploy_config  deploy_multiple_config  sample_plugin.c
scripts/: install.sh  osxiec_deploy_multiple.sh
term/: go.mod  osxiec_term.go
